# pinchtab-webgraph

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ask.py  bench.sh  cache_store.py  crawl-config.audit.example.json  crawl-config.example.json  crawl.py  hard-bench.sh  howto.py  interaction_crawl.py  login-config.example.json  paths.py  pyproject.toml  recipe.py  relaunch-bridge.sh  run-ask.sh  run-crawl-interactions.sh  run-crawl.sh  run-recipe.sh  start-crawl-browser.sh  start-teams-bridge.sh  teams-extract.py  utcp-manual.json
.claude/: settings.json
docs/: README.md  authenticated-login.md  flows.md  mcp-server.md  perform-live-test.md  ui.md  utcp.md
examples/flows/: download-all-reports.json  upload-document.json
pinchtab_webgraph/: __init__.py  api.py  artifacts.py  ask.py  browser.py  cache_cmd.py  cache_store.py  cli.py  commands.py  crawl.py  flow.py  flow_cmd.py  flow_resolve.py  howto.py  interaction_crawl.py  login.py  mcp_server.py  perform.py  query_cmd.py  recipe.py  runner.py  selftest.py  utcp_manual.py
pinchtab_webgraph/ui/: __init__.py  chat.py  chat_backend.py  chat_claude_code.py  chat_store.py  flow_runner.py  flow_store.py  live_crawl.py  screencast.py  server.py  vault.py
pinchtab_webgraph/ui/static/: app.js  explore.css  explore.js  flow_canvas.js  flows.css  flows.js  graph.css  graph.js  index.html  style.css
scripts/: bench-discovery.sh  bench.sh  hard-bench.sh  relaunch-bridge.sh  run-ask.sh  run-crawl-interactions.sh  run-crawl.sh  run-recipe.sh  site-audit.sh  start-crawl-browser.sh  start-teams-bridge.sh
tests/: conftest.py  test_api.py  test_artifacts.py  test_ask.py  test_browser.py  test_cache_cmd.py  test_cache_store.py  test_chat_store.py  test_cli.py  test_commands.py  test_crawl_extract.py  test_crawl_render.py  test_discovery_bench.py  test_download_goal_routing.py  test_flow.py  test_flow_cmd.py  test_flow_resolve.py  test_flow_store.py  test_generality_identity.py  test_interaction_crawl_single_url.py  test_matching.py  test_mcp_server.py  test_perform.py  test_query_cmd.py  test_runner.py  test_selftest.py  test_single_url_detect.py  test_smoke_flows.py  test_state_identity.py  test_ui_chat.py  test_ui_chat_backend.py  test_ui_chat_claude_code.py  test_ui_flow_runner.py  test_ui_live_crawl.py  test_ui_screencast.py  test_ui_server.py  test_ui_vault.py  test_utcp_manual.py
tests/audit/: check.py  sites.json  test_check.py
tests/e2e/: flow_index.html  flow_page1.html  flow_page2.html  flow_page3.html  other.html  single_url_report_page.html  single_url_shell_fixture.html  test_crawl_upload_e2e.py  test_flow_paginate_download_e2e.py  test_single_url_detect_e2e.py  test_single_url_form_read_e2e.py  test_ui_crawl_e2e.py  test_upload_document_e2e.py  upload_fixture.html
tests/e2e/single_url_fix/: appshell.html
tests/e2e/single_url_fix/multi/: index.html  page-alpha.html  page-bravo.html  page-charlie.html  page-delta.html  page-echo.html  page-foxtrot.html  page-golf.html  page-hotel.html
tests/fixtures/: fake_pinchtab.py  linkedin_guest_graph.json  saas_generic_graph.json  sample_interaction_graph.json  sample_link_graph.json  second_host_graph.json  spanish_app_graph.json  two_downloads_graph.json
